--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,17 @@
+
+
 body {
-    background: url("/crystal-collector/assets/images/dark-grey-terrazzo.png")
-}
-body {
-    background-image: url("/crystal-collector/assets/images/dark-grey-terrazzo.png");
-    background-position: center 0%;
-    background-repeat: no-repeat;
+    background-image: url("../images/terazzo.png.png");
+   
 }
 div {
-    display: flex;
+    display: block;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
     min-height: 50px;
-    color:rgb(0, 7, 7);
+    color:rgb(191, 241, 97);
     font-family: Pehlevi;
 }
 .sidenav {
