--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,8 @@ body {
    
 }
 div {
-    display: block;
-    flex-direction: column;
+    display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -37,3 +37,4 @@ div {
     padding-top: 20px;
     color: orangered;
 }
+
