--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,28 @@ div {
     text-align: center;
     min-height: 50px;
     color:rgb(191, 241, 97);
-    font-family: Pehlevi;
+    font-family: 'Yeon Sung', cursivei;
+    
+    -webkit-animation-name: example; /* Safari 4.0 - 8.0 */
+    -webkit-animation-duration: 9s; /* Safari 4.0 - 8.0 */
+    animation-name: example;
+    animation-duration: 9s;
+}
+
+/* Safari 4.0 - 8.0 */
+@-webkit-keyframes example {
+    0%   {background-color: red;}
+    25%  {background-color: yellow;}
+    50%  {background-color: blue;}
+    100% {background-color: green;}
+}
+
+/* Standard syntax */
+@keyframes example {
+    0%   {background-color: red;}
+    25%  {background-color: yellow;}
+    50%  {background-color: blue;}
+    100% {background-color: green;}
 }
 .sidenav {
     height: 100%;
@@ -36,5 +57,13 @@ div {
     overflow-x:hidden;
     padding-top: 20px;
     color: orangered;
+}
+
+.crystal {
+    position: relative;
+    left: 600px;
+    flex-direction: column;
+    max-width: 100px;
+    
 }
 
